@@ -415,8 +415,8 @@ void TextualOutputPort::putDatum(Object o, bool inList /* = false */)
         putDatum(record->recordTypeDescriptor()->name(), inList);
         putString(UC(" "));
         for (int i = 0; i < record->fieldsLength(); i++) {
-//             putDatum(record->fieldAt(i));
-//             putString(UC(" "));
+            putDatum(record->fieldAt(i));
+            putString(UC(" "));
         }
         putString(UC(">"));
     } else if (o.isObjectPointer()) {
@@ -593,10 +593,10 @@ void TextualOutputPort::display(Object o, bool inList /* = false */)
         putString(UC("#<record "));
         putDatum(record->recordTypeDescriptor()->name(), inList);
         putString(UC(" "));
-//         for (int i = 0; i < record->fieldsLength(); i++) {
-//             putDatum(record->fieldAt(i));
-//             putString(UC(" "));
-//         }
+        for (int i = 0; i < record->fieldsLength(); i++) {
+            putDatum(record->fieldAt(i));
+            putString(UC(" "));
+        }
         putString(UC(">"));
     } else if (o.isObjectPointer()) {
         putString(UC("#<object pointer>"));
