@@ -1,3 +1,7 @@
+2009-03-07  higepon  <higepon@users.sourceforge.jp>
+
+        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss (condition-printer): Changed to print parent fields.
+
 2009-03-05  higepon  <higepon@users.sourceforge.jp>
 
         * Passed all of file-options pattern tests for input/output-port.
